# igsift

./: .editorconfig  .gitattributes  .gitignore  .prettierignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  SPEC.md  deny.toml  lefthook.yml  mutants.toml
.cargo/: mutants.toml
.githooks/: pre-commit
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
config/: drop_list.txt.example  droplist.txt.example  keep_allowlist.txt.example  keeplist.txt.example  labels.txt.example  scoring.toml
config/presets/: balanced.toml  engagement.toml  tenure.toml
docs/: DESIGN.md  GOING-PUBLIC.md  TUNING.md
docs/plans/: 2026-05-31-display-width-correctness.md  2026-05-31-terminal-summary-dashboard.md  2026-06-01-effort-skew-gate.md  2026-06-01-inert-account-floor.md  2026-06-01-nonmutual-close-tie-gate.md  2026-06-01-review-subgrouping-inert-faded.md
docs/specs/: 2026-05-30-reciprocity-aware-scoring.md  2026-05-31-effort-skew-gate-design.md  2026-05-31-terminal-summary-dashboard-design.md  2026-06-01-dead-mutual-review-gate-design.md  2026-06-01-inert-account-floor-design.md  2026-06-01-nonmutual-close-tie-gate-design.md  2026-06-01-review-subgrouping-inert-faded-design.md
examples/: showcase.rs
scripts/: showcase-shots.sh  walk_export_schema.sh
src/: allowlist.rs  archive.rs  cli.rs  config.rs  export.rs  features.rs  labels.rs  lib.rs  lists.rs  main.rs  output.rs  progress.rs  scoring.rs  summary.rs  term_style.rs  text.rs
src/features/: account_class.rs  aggregate.rs  mod.rs  name_resolution.rs
src/output/: csv.rs  html.rs  markdown.rs  mod.rs
tests/: cli.rs
tests/fixtures/: README.md
tests/fixtures/sample_export/connections/followers_and_following/: blocked_profiles.json  close_friends.json  followers_1.json  following.json  hide_story_from.json  profiles_you've_favorited.json  recently_unfollowed_profiles.json  removed_suggestions.json  restricted_profiles.json
tests/fixtures/sample_export/personal_information/personal_information/: personal_information.json
tests/fixtures/sample_export/your_instagram_activity/comments/: hype.json  post_comments_1.json  reels_comments.json
tests/fixtures/sample_export/your_instagram_activity/likes/: liked_comments.json  liked_posts.json
tests/fixtures/sample_export/your_instagram_activity/messages/inbox/alice_thread/: message_1.json
tests/fixtures/sample_export/your_instagram_activity/messages/inbox/bob_thread/: message_1.json  message_2.json
tests/fixtures/sample_export/your_instagram_activity/messages/inbox/carol_thread/: message_1.json
tests/fixtures/sample_export/your_instagram_activity/messages/message_requests/stranger_thread/: message_1.json
tests/fixtures/sample_export/your_instagram_activity/saved/: saved_posts.json
tests/fixtures/sample_export/your_instagram_activity/story_interactions/: countdowns.json  emoji_sliders.json  emoji_story_reactions.json  polls.json  questions.json  quizzes.json  stories_viewed.json  story_likes.json  story_reaction_sticker_reactions.json
