[package]
name = "ig-mgr"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Local-first CLI that scores Instagram followings from a personal data export and ranks who to unfollow vs. keep."
authors = ["Gati Petriashvili <gatipetriashvili@gmail.com>"]
license = "MIT"
repository = "https://github.com/gati3478/ig-manager"
readme = "README.md"
keywords = ["instagram", "cli", "data-export", "local-first"]
categories = ["command-line-utilities"]

# Binary is `ig-mgr`; library crate is `ig_mgr` (shared by the binary and the
# integration tests in `tests/`). This is one package with two targets, not a
# workspace split — see docs/DESIGN.md.

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# Conservative for now. Tighten toward `pedantic`/`nursery` once real logic
# lands and the noise is worth triaging.
all = { level = "warn", priority = -1 }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[dependencies]
aho-corasick = "1.1.3"
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
csv = "1.4.0"
indicatif = "0.18.4"
jiff = "0.2.24"
owo-colors = "4.3.0"
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_path_to_error = "0.1.20"
thiserror = "2.0.18"
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2.2.2"
insta = { version = "1.47.2", features = ["json", "redactions"] }
predicates = "3.1.4"
