[package]
name = "igsift"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Local-first CLI that sifts your Instagram followings from a personal data export into a keep/unfollow audit."
authors = ["Gati Petriashvili <gatipetriashvili@gmail.com>"]
license = "MIT"
repository = "https://github.com/gati3478/igsift"
readme = "README.md"
keywords = ["instagram", "cli", "data-export", "local-first"]
categories = ["command-line-utilities"]

# Binary and library crate are both `igsift` (Cargo auto-derives the lib name
# from the package). The library is shared by the binary and the integration
# tests in `tests/`. This is one package with two targets, not a workspace
# split — see docs/DESIGN.md.

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# Conservative for now. Tighten toward `pedantic`/`nursery` once real logic
# lands and the noise is worth triaging.
all = { level = "warn", priority = -1 }

[profile.release]
lto = "thin"
codegen-units = 1
# Intentionally no `strip`: enabling it trips a cargo finalize bug on the
# release runners (`failed to remove file .../deps/igsift` — ENOENT on macOS,
# EACCES on Windows) when building with `--target`. LTO already keeps the
# binary lean; ship it unstripped rather than reintroduce that failure.

[dependencies]
aho-corasick = "1.1.3"
anyhow = "1.0.102"
anstyle = "1.0"
clap = { version = "4.6.1", features = ["derive"] }
console = "0.16"
csv = "1.4.0"
indicatif = "0.18.4"
jiff = "0.2.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_path_to_error = "0.1.20"
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
unicode-width = "0.2"
zip = { version = "8", default-features = false, features = ["deflate-flate2-zlib-rs"] }

[dev-dependencies]
assert_cmd = "2.2.2"
predicates = "3.1.4"
